Pull request: Fix redundant scroll on new tab switching
Merge in EXTENSIONS/safari-app-extension from fix/scroll to master

Squashed commit of the following:

commit 61eec88dde7bdee52ef485000633459842bc4600 [formerly 274ec0c994985ba94a6a8d635c150bd4cfdddd83]
Author: tvinzz <o.labudko@adguard.com>
Date:   Thu Jun 3 12:19:59 2021 +0200

    removed commented code

commit ee9f79c0325ffe882ccebca5265082f7583e0523 [formerly fca97a36f8befc8b07910b7a84249266a032fa5e]
Author: tvinzz <o.labudko@adguard.com>
Date:   Thu Jun 3 12:19:02 2021 +0200

    fixed redundant scrolling


Former-commit-id: 4fcab0c6481cab2411426f6cf92d5e70db3b6745

--- a/ElectronMainApp/src/main/ui/css/style.css
+++ b/ElectronMainApp/src/main/ui/css/style.css
@@ -1,7 +1,6 @@
 /* Generated by less 2.5.1 */
 body {
-  overflow-y: auto !important;
-  overflow-x: hidden !important;
+  overflow: initial;
 }
 #preloaderContainer {
   position: absolute;
